apps/trieve/ui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base
spec:
  template:
    spec:
      containers:
      - name: base
        image: base
        ports:
          - containerPort: 80
