apps/trieve/ui/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: base
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: base
